# LLM_course

./: .gitignore  playground.ipynb  pyproject.toml
Part1_TokensEmbeddings/text2numbers/: part1_text2num_BERT.ipynb  part1_text2num_CCbertChars_helper.ipynb  part1_text2num_CCbytePairEncodingLoop_helper.ipynb  part1_text2num_CCmakeATokenizer_helper.ipynb  part1_text2num_CCrapperName_helper.ipynb  part1_text2num_CCtokenCompression_helper.ipynb  part1_text2num_CCtranslatorFuns_helper.ipynb  part1_text2num_bytePairEncoding.ipynb  part1_text2num_preparingText4tokens.ipynb  part1_text2num_strawberry.ipynb  part1_text2num_text2numbers.ipynb  part1_text2num_tokenTranslation.ipynb
Part2_LargeLanguageModels/finetune/: part2_finetune_CCcodeGenCalc_helper.ipynb  part2_finetune_CodeGen.ipynb
Part2_LargeLanguageModels/finetune/solutions/: part2_finetune_CCcodeGenCalc.ipynb
